--- a/policy/privacy/index.html
+++ b/policy/privacy/index.html
@@ -139,7 +139,7 @@
 							
 			
 																<dl class="tags">
-						<dt>태그</dt>
+						<dt>유틸리티</dt>
 													<dd>
 								<a href="https://text.yohan1002.com/계산기/tag/이력서/" title="이력서 목록보기">
 									이력서<span>(1)</span>
